--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "chai": "^4.3.6",
     "cz-conventional-changelog": "^3.3.0",
     "dotenv": "^16.0.1",
+    "erc721a": "^4.1.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard": "^16.0.3",
